--- a/client/source/scripts/views/overlayView.less
+++ b/client/source/scripts/views/overlayView.less
@@ -49,7 +49,7 @@
 
         cursor: pointer;
 
-        font-size: 1.25em;
+        font-size: 3.5vw;
     }
 
     .playing {
